[package]
name = "fftbenching"
version = "0.1.0"
authors = ["HEnquist <henrik.enquist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = { path = "../RustFFT" }
num-complex = ">=0.3.0"
num-traits = ">=0.0.0"